# SofaViscoElastic

./: Authors.md  CITATION.cff  CITATIONz.cff  CMakeLists.txt  LICENSE.md  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
Bindings/: BindingsSofaViscoElasticConfig.cmake.in  CMakeLists.txt
Bindings/src/: Binding_TetrahedronViscoElasticityFEMForceField.cpp  Binding_TetrahedronViscoElasticityFEMForceField.h  Binding_TetrahedronViscoHyperElasticityFEMForceField.cpp  Binding_TetrahedronViscoHyperElasticityFEMForceField.h  Module_TetrahedronViscoElasticityFEMForceField.cpp
examples/: .scene-tests  Pendulum1.py  creep-test-sinusoidal.py  creep-test-viscohyperelastic.py  creep-test.py  creep-test.py.view  stress-map.py  stress-relaxation-test.py  stress-relaxation-test1.py  stress-relaxation-viscohyperelastic.py  volumetric_mesh.py
examples/mesh/: cylinder1513.vtk  cylinder31114.vtk  cylinder5296.stl  cylinder5296.vtk  cylinder5296_v1.vtk  cylinder9178.vtk
examples/plot/: Burgers.txt  Burgers_new.txt  Burgers_relaxation.txt  Kelvin.txt  Kelvin2.txt  Kelvin2_relaxation.txt  Maxwell.txt  Maxwell_relaxation.txt  SLS_Kelvin.txt  SLS_Kelvin2.txt  SLS_Kelvin2_relaxation.txt  SLS_Kelvin_relaxation.txt  SLS_Maxwell.txt  SLS_Maxwell2.txt  SLS_Maxwell2_relaxation.txt  SLS_Maxwell_relaxation.txt  SLS_Maxwell_relaxation_1513.txt  SLS_Maxwell_relaxation_5296.txt  SLS_Maxwell_relaxation_9178.txt  SLS_Maxwell_tau10.txt  SLS_Maxwell_tau100.txt  SLS_Maxwell_tau1000.txt  SLS_Maxwell_tau1000_new.txt  SLS_Maxwell_tau100_new.txt  SLS_Maxwell_tau10_new.txt  SLS_Maxwell_tau20.txt  SLS_Maxwell_tau50.txt  SLS_Maxwell_tau80.txt
src/SofaViscoElastic/: TetrahedronViscoHyperelasticityFEMForceField.cpp  TetrahedronViscoHyperelasticityFEMForceField.h  TetrahedronViscoHyperelasticityFEMForceField.inl  TetrahedronViscoelasticityFEMDrawing.h  TetrahedronViscoelasticityFEMForceField.cpp  TetrahedronViscoelasticityFEMForceField.h  TetrahedronViscoelasticityFEMForceField.inl  config.h.in  init.cpp  init.h
src/SofaViscoElastic/material/: BaseViscoelasticMaterial.h  Burgers.h  KelvinVoigtFirstOrder.h  KelvinVoigtSecondOrder.h  MaxwellFirstOrder.h  MaxwellSecondOrder.h  SLSKelvinVoigtFirstOrder.h  SLSKelvinVoigtSecondOrder.h  SLSMaxwellFirstOrder.h  SLSMaxwellSecondOrder.h  ViscoelasticMaterial.h
src/SofaViscoElastic/material/viscoelastic/: BaseViscoelasticMaterial.h  Burgers.h  KelvinVoigtFirstOrder.h  KelvinVoigtSecondOrder.h  LinearElastic.h  MaxwellFirstOrder.h  MaxwellSecondOrder.h  SLSKelvinVoigtFirstOrder.h  SLSKelvinVoigtSecondOrder.h  SLSMaxwellFirstOrder.h  SLSMaxwellSecondOrder.h
src/SofaViscoElastic/material/viscohyperelastic/: BaseViscoHyperelasticMaterial.h  SLSMooneyRivlinFirstOrder.h  SLSMooneyRivlinSecondOrder.h  SLSNeoHookeanFirstOrder.h  SLSNeoHookeanSecondOrder.h  SLSOgdenFirstOrder.h  SLSOgdenSecondOrder.h  SLSStableNeoHookeanFirstOrder.h  SLSStableNeoHookeanSecondOrder.h
